@@ -346,14 +346,6 @@ hserver_thread_worker (void *data)
 }
 
 void
-pk_hserver_load (void)
-{
-  /* Load the Poke components of the hserver.  */
-  if (!pk_load (poke_compiler, "pk-hserver"))
-    pk_fatal ("unable to load the pk-hserver module");
-}
-
-void
 pk_hserver_init (void)
 {
   char hostname[128];
